--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = flutter_fb
+PRODUCT_NAME = flutter_facebook_login_demo
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.awaitanthony.flutterFb
+PRODUCT_BUNDLE_IDENTIFIER = com.awaitanthony.flutterFacebookLoginDemo
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.awaitanthony. All rights reserved.
