--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_fb
+name: flutter_facebook_login_demo
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
